# m1k3

./: .gitignore  .gitmodules  .graphifyignore  .mcp.json  ACCESS.md  ACCESS_AGREEMENT.md  AGENT_ARCHITECTURE.md  BUGS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODING_MODELS.md  CONTRIBUTING.md  EMBEDDING_MIGRATION.md  GAMEBOY_PIXEL_ENGINE_SUMMARY.md  GEMINI.md  LICENSE  Makefile  NAVIGATION_IMPROVEMENTS.md  NOTICE  PROJECT_BRANCH_REVIEW.md  PROJECT_WIDE_TEST_RESULTS.md  README.md  SECURITY.md  SESSION_SUMMARY_MOBILE_DASHBOARD_IMPLEMENTATION.md  SETUP.md  SMALLER_REASONING_MODELS.md  TODO.md  UNIVERSAL_MODEL_ENGINE.md  WEBSOCKET_DEBUGGING.md  WITTY_BARTENDER_SHOWCASE.md  adaptive_ai_engine.py  adaptive_model_config.py  adaptive_prompt_formatter.py  ai_inference.py  async_model_loader.py  audio_completion_engine.py  audio_effects.py  avatar.html  avatar_controller.py  avatar_dashboard.js  (+150 more)
.claude/: settings.local.json
.claude/agents/: kmp-mobile-ai-reviewer.md  python-ai-edge-reviewer.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  attic.yml  badges.yml  badges.yml.disabled  ci-health-triage.yml  ci.yml  claude-code-review-mac.yml  claude-code-review.yml  claude.yml  nightly-dmg.yml  quick-tests.yml  release-testing.yml  repo-visualization.yml.disabled  repo-visualizer.yml  security-scanning.yml  security.yml  unified-tests.yml  visual-regression.yml  visual-regression.yml.disabled
_legacy/: README.md  llm_greeting_engine.py  optimized_websocket_protocol.py  system_context_builder.py  voice_input_processor.py  voice_truncation_tracker.py
app/: .gitignore  AI_ARCHITECTURE.md  ARCHITECTURE.md  CLAUDE.md  DI_TESTS_SUMMARY.md  EMBEDDING_GEMMA_INTEGRATION.md  EMBEDDING_IMPLEMENTATION_SUMMARY.md  FORMAT_RESEARCH_3D_MORPHS_2025_11_08.md  GEMMA3_DEPLOYMENT_STATUS.md  NEXT_STEPS.md  ONNX_IMPLEMENTATION_COMPLETE.md  OPUS.md  PLAN_IOS.md  PLAN_OSS.md  PROJECT_MANAGEMENT.md  QUICK_START_EMBEDDINGS.md  QUIRKY_ANIMALS_GLB_ANALYSIS_2025_11_08.md  README.md  SESSION_NOTES_2025_11_04.md  SESSION_NOTES_2025_11_05.md  SESSION_NOTES_2025_11_06_CHATML_FIXES.md  SESSION_NOTES_2025_11_06_GUARD_RAILS.md  SESSION_NOTES_2025_11_06_LLAMA_CPP_MIGRATION.md  SESSION_NOTES_2025_11_06_MODEL_DEBUGGING.md  SESSION_NOTES_2025_11_06_RAG_FIX.md  SESSION_NOTES_3D_AVATAR_MORPHS_2025_11_08.md  SESSION_SUMMARY_2025_11_03.md  TWO_TIER_EMBEDDING_STRATEGY.md  build.gradle.kts  build_bundle.sh  compare_sizes.sh  consolidate_knowledge_bases.py  export_gemma3_270m.py  export_smollm2_135m.py  fix_gemma_deps.sh  gradle.properties  install_bundle.sh  install_gemma_deps.sh  optimize_minilm_embeddings.py  quantize_smollm2_135m.py  (+7 more)
app/.claude/: settings.local.json
app/3d/: sparrow.glb
app/codingModule/: .gitignore  build.gradle.kts  proguard-rules.pro
app/composeApp/: README.md  build.gradle.kts  proguard-rules.pro
app/composeApp/src/androidMain/cpp/: CMakeLists.txt  ma_bridge.cpp
attic/: README.md  SETUP.md  mcp_server.postman_collection.json  package.json  requirements-ci.txt
backup/: m1k3-old.html
config/: model_profiles.json  smollm_config.json
demos/: avatar_demo.py  debug_cutoff_issue.py  demo.py  demo_complete_tts_integration.py  demo_intelligent_tts_controller.py  demo_multi_tier_voice_system.py  demo_quick_completion_test.py  demo_sidechain_compression.py  demo_tts_auto.py  demo_tts_quick_showcase.py  demo_tts_showcase.py  demo_tts_showcase_with_sfx.py  demo_tts_simple.py  demo_voice_quality_test.py  enhanced_cli_with_sounds.py  mind_blowing_m1k3_showcase.py  refactoring_checklist.json  refactoring_checklist.py  retro_demo.py  test_suite_comprehensive.py  witty_bartender_m1k3.py
docs/: FALCON_MAMBA2_TEST.md  M1K3_SYSTEM_PROMPTS.md  M1K3_VOICE_CONFIG.md  MLX_SETUP.md  NEXT_SESSION.md  OPEN_SOURCE_MODELS.md  PROMPTS.md  STT_SYSTEM.md  STT_TROUBLESHOOTING.md  VIBEVOICE_DEMO_GUIDE.md
js/: M1K3App.js
knowledge/: ai_ml_education_documents.json  comprehensive_knowledge_base.json  expansion_phase1.json  knowledge_expansion_samples.json
macos/: .gitignore  .swiftlint.yml  CLAUDE.md  Gemfile  PLAN.md  PROGRESS.md  Package.resolved  Package.swift  README.md  ROADMAP.md  UI_AUDIT.md  project.yml  weights-manifest.json
models/: TinyLlama_TinyLlama_1.1B_Chat_v1.0  distilgpt2  google_gemma_2_2b_it  microsoft_DialoGPT_small  microsoft_Phi_3_mini_4k_instruct  startup_config.json
playwright-report/: index.html
pwa-deployment/: DEPLOYMENT.md  Dockerfile.simple  README.md  USER_FLOW.md  docker-compose.simple.yml  test_pipeline_quick.py  test_report.json
scripts/: avatar_emotion.py  demo_m1k3_speaking.sh  direct_ai_philosophy_test.py  download_avatar_models.sh  full_system_test.py  mlx_full_pipeline.py  mlx_model_interview.py  quick_gemma_philosophy.py  quick_streaming_test.py  test_report.json  verify-webview-avatar.sh
site/: README.md  companions.html  geo.css  index.html  llms.txt  local-llm-mac-guide.html  mcp-knowledge-server.html  privacy.html  private-chatgpt-alternative-mac.html  robots.txt  site.webmanifest  sitemap.xml  vs-ollama.html
specs/: m1k3-project-spec.md
src/avatar-popover/src-tauri/: Cargo.toml  tauri.conf.json
src/avatar-popover/src-tauri/capabilities/: default.json
src/avatar-popover/src-tauri/src/: lib.rs
styles/: animations.css  avatar-component.css  dashboard-components.css  dashboard-responsive.css  design-tokens.css  hero-section.css
test-results/: .last-run.json
tests/: CI_TRIAGE.md  audio_test_framework.py  ci_smoke.txt  conftest.py  demo_voice_quick.py  demo_voice_showcase.py  playwright.config.js  test_avatar_integration.py  test_content_specific_effects.py  test_enhanced_dashboard.py  test_final_validation.py  test_gemma_2b.py  test_html_code.py  test_intelligent_tts_controller.py  test_mcp_server.py  test_model_output_parser.py  test_narration_handling.py  test_real_ai.py  test_responses.py  test_ui_interactive.py  test_voice_optimization.py  test_websocket.py
vibevoice_demos/: narrative_text.txt  performance_results.json  streaming_info.json
(+1991 files in other folders)
