[package]
name = "m1k3-avatar"
version = "1.0.0"
description = "M1K3 Avatar - Standalone popover companion"
authors = ["Kevin Murphy"]
license = "MIT"
repository = "https://github.com/yourusername/m1k3"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
